--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,7 @@ dependencies {
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.16.0'
+
+    //
+    implementation 'com.drakeet.multitype:multitype:4.3.0'
 }
